--- a/wieloczynnikowa_reg_lin.ipynb
+++ b/wieloczynnikowa_reg_lin.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        [,1]\n",
-      "   30.912131\n",
-      "x1  4.369448\n",
-      "x2  0.063614\n",
+      "           [,1]\n",
+      "   3.462658e+02\n",
+      "x1 9.373550e-02\n",
+      "x2 1.497034e-03\n",
       "[1] \"round:\"\n"
      ]
     },
@@ -20,27 +20,27 @@
      "data": {
       "text/html": [
        "<ol class=list-inline>\n",
-       "\t<li>31</li>\n",
-       "\t<li>4</li>\n",
+       "\t<li>346</li>\n",
+       "\t<li>0</li>\n",
        "\t<li>0</li>\n",
        "</ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 31\n",
-       "\\item 4\n",
+       "\\item 346\n",
+       "\\item 0\n",
        "\\item 0\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 31\n",
-       "2. 4\n",
+       "1. 346\n",
+       "2. 0\n",
        "3. 0\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 31  4  0"
+       "[1] 346   0   0"
       ]
      },
      "metadata": {},
@@ -57,10 +57,10 @@
      "data": {
       "text/plain": [
        "'mpfrMatrix' of dim(.) =  (3, 1) of precision  128   bits \n",
-       "   [,1]                                       \n",
-       "     30.91213067342200560005949228070676326752\n",
-       "x1   4.369447961519718148792890133336186408997\n",
-       "x2 0.06361400494390001547628799016820266842842"
+       "   [,1]                                        \n",
+       "      346.2658200129554302293399814516305923462\n",
+       "x1  0.09373549674477449356047031869820784777403\n",
+       "x2 0.001497034213840897631797588474000804126263"
       ]
      },
      "metadata": {},
@@ -69,11 +69,11 @@
     {
      "data": {
       "text/plain": [
-       "'mpfrMatrix' of dim(.) =  (3, 1) of precision  333   bits \n",
-       "   [,1]                                                                                                     \n",
-       "     30.9121306734220056000594922807067632675170898437500000000000000000000000000000000000000000000000000000\n",
-       "x1   4.36944796151971814879289013333618640899658203125000000000000000000000000000000000000000000000000000000\n",
-       "x2 0.0636140049439000154762879901682026684284210205078125000000000000000000000000000000000000000000000000000"
+       "'mpfrMatrix' of dim(.) =  (3, 1) of precision  180   bits \n",
+       "   [,1]                                                        \n",
+       "      346.26582001295543022933998145163059234619140625000000000\n",
+       "x1  0.093735496744774493560470318698207847774028778076171875000\n",
+       "x2 0.0014970342138408976317975884740008041262626647949218750000"
       ]
      },
      "metadata": {},
@@ -132,10 +132,10 @@
      "data": {
       "text/plain": [
        "# A float32 matrix: 3x1\n",
-       "        [,1]\n",
-       "   30.912130\n",
-       "x1  4.369448\n",
-       "x2  0.063614"
+       "         [,1]\n",
+       "   346.265808\n",
+       "x1   0.093735\n",
+       "x2   0.001497"
       ]
      },
      "metadata": {},
@@ -151,8 +151,8 @@
     "\n",
     "d = lm(genomes$GC ~ genomes$size + genomes$temperature)\n",
     "\n",
-    "y = genomes$GC\n",
-    "x1 = genomes$size\n",
+    "y1 = log(genomes$GC)\n",
+    "x = genomes$size\n",
     "x2 = genomes$temperature\n",
     "\n",
     "estim = function(x1,x2,y){\n",
@@ -162,18 +162,214 @@
     "    return (beta)\n",
     "}\n",
     "\n",
-    "estim = estim(x1,x2,y)\n",
+    "convert = function(z){\n",
+    "    c = z*(10**2)\n",
+    "    return(c)\n",
+    "}\n",
+    "y = convert(y1)\n",
+    "x = convert(x)\n",
+    "x1 = convert(x2)\n",
+    "\n",
+    "estim = estim(x,x1,y)\n",
     "print(estim)\n",
     "\n",
     "print('round:')\n",
     "round(as.numeric(estim))\n",
     "print('z użyciem biblioteki Rmpfr:')\n",
     "mpfr(estim, 128)\n",
-    "mpfr(estim, 333)\n",
+    "mpfr(estim, 180)\n",
     "print('przyrównanie do wbudowanej funkcji lm:')\n",
     "estim == d$coeff\n",
     "print('float:')\n",
     "fl(estim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wartość estymatora największa jest dla biblioteki Rmpfr z funkcji mpfr z precyzją 180.\n",
+    "\n",
+    "Wartość estymatora najmniejsza jest dla kodu bez użycia wbudowanych funkcji.\n",
+    "\n",
+    "Różnice pomiędzy wartościami: różnice spowodowane są zaokrąglaniem liczb zmiennoprzecinkowych,użycie funkcji wbudowanych(takich jak mpfr)daje nam bardziej precyzyjne wyniki,dlatego wyniki się różnią."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wieloczynnikowa regresja liniowa z 4 zmiennymi:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            [,1]\n",
+      "    8.943380e+14\n",
+      "x1  8.565262e+10\n",
+      "x2  1.430070e+11\n",
+      "x3 -2.199507e+09\n",
+      "x4  1.110461e+08\n",
+      "[1] \"round:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>894</li>\n",
+       "\t<li>0</li>\n",
+       "\t<li>0</li>\n",
+       "\t<li>0</li>\n",
+       "\t<li>0</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 894\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\item 0\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 894\n",
+       "2. 0\n",
+       "3. 0\n",
+       "4. 0\n",
+       "5. 0\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 894   0   0   0   0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"z użyciem biblioteki Rmpfr:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'mpfrMatrix' of dim(.) =  (5, 1) of precision  120   bits \n",
+       "   [,1]                                       \n",
+       "       894.33795836761419195681810379028320312\n",
+       "x1   0.085652621981125776073895394802093505859\n",
+       "x2    0.14300699763407465070486068725585937500\n",
+       "x3 -0.0021995065908697597478749230504035949707\n",
+       "x4 0.00011104609979994961577176582068204879761"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'mpfrMatrix' of dim(.) =  (5, 1) of precision  150   bits \n",
+       "   [,1]                                                \n",
+       "       894.33795836761419195681810379028320312500000000\n",
+       "x1   0.085652621981125776073895394802093505859375000000\n",
+       "x2    0.14300699763407465070486068725585937500000000000\n",
+       "x3 -0.0021995065908697597478749230504035949707031250000\n",
+       "x4 0.00011104609979994961577176582068204879760742187500"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"float:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "# A float32 matrix: 5x1\n",
+       "          [,1]\n",
+       "    8.9434e+02\n",
+       "x1  8.5653e-02\n",
+       "x2  1.4301e-01\n",
+       "x3 -2.1995e-03\n",
+       "x4  1.1105e-04"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "library(Rmpfr)\n",
+    "library(float)\n",
+    "\n",
+    "reg=read.csv(\"seyreg.csv\")\n",
+    "\n",
+    "y1 = log(reg$vlm)\n",
+    "x1 = reg$at\n",
+    "x2 = reg$sst\n",
+    "x3 = reg$sl\n",
+    "x4 = reg$pt\n",
+    "\n",
+    "estim = function(x1,x2,x3,x4,y){\n",
+    "    Y = as.matrix(y);\n",
+    "    X = as.matrix(cbind(1,x1,x2,x3,x4));\n",
+    "    beta = solve(t(X) %*% X) %*% (t(X) %*% Y)\n",
+    "    return (beta)\n",
+    "}\n",
+    "convert = function(c){\n",
+    "    z=c*(10**12)\n",
+    "    return(z)\n",
+    "}\n",
+    "\n",
+    "estim = estim(x1,x2,x3,x4,y)\n",
+    "print(convert(estim))\n",
+    "\n",
+    "print('round:')\n",
+    "round(as.numeric(estim))\n",
+    "print('z użyciem biblioteki Rmpfr:')\n",
+    "mpfr(estim, 120)\n",
+    "mpfr(estim, 150)\n",
+    "print('float:')\n",
+    "fl(estim)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wartość estymatora największa jest dla funkcji mpfr o prezcyzji 150.  \n",
+    "\n",
+    "Wartość estymatora najmniejsza jest dla napisanego kodu bez funkcji wbudowanych oraz dla funkcji float.\n",
+    "\n",
+    "Różnice pomiędzy wartościami: polegają na zaokrąglaniu liczb,użyte funkcje(mpfr) są bardziej precyzyjne."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wieloczynnikowa liniowa regresja z użyciem funkcji lm:"
    ]
   },
   {
@@ -294,14 +490,6 @@
    "display_name": "R",
    "language": "R",
    "name": "ir"
-  },
-  "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "3.6.1"
   }
  },
  "nbformat": 4,
