--- a/wieloczynnikowa_reg_lin.ipynb
+++ b/wieloczynnikowa_reg_lin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,6 +140,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"z użyciem funkcji sprintf:\"\n",
+      "[1] \"346.2658200129554302293399814516305923461914062500000000000\"\n",
+      "[2] \"0.0937354967447744935604703186982078477740287780761718750\"  \n",
+      "[3] \"0.0014970342138408976317975884740008041262626647949218750\"  \n"
+     ]
     }
    ],
    "source": [
@@ -181,14 +191,17 @@
     "print('przyrównanie do wbudowanej funkcji lm:')\n",
     "estim == d$coeff\n",
     "print('float:')\n",
-    "fl(estim)"
+    "fl(estim)\n",
+    "\n",
+    "print('z użyciem funkcji sprintf:')\n",
+    "print(sprintf(\"%.55f\", estim))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wartość estymatora największa jest dla biblioteki Rmpfr z funkcji mpfr z precyzją 180.\n",
+    "Wartość estymatora największa jest dla biblioteki Rmpfr z funkcji mpfr z precyzją 180 oraz dla funkcji sprintf.\n",
     "\n",
     "Wartość estymatora najmniejsza jest dla kodu bez użycia wbudowanych funkcji.\n",
     "\n",
@@ -204,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212,11 +225,11 @@
      "output_type": "stream",
      "text": [
       "            [,1]\n",
-      "    8.943380e+14\n",
-      "x1  8.565262e+10\n",
-      "x2  1.430070e+11\n",
-      "x3 -2.199507e+09\n",
-      "x4  1.110461e+08\n",
+      "   8943379583555\n",
+      "x1     856526223\n",
+      "x2    1430069974\n",
+      "x3     -21995066\n",
+      "x4       1110461\n",
       "[1] \"round:\"\n"
      ]
     },
@@ -224,7 +237,7 @@
      "data": {
       "text/html": [
        "<ol class=list-inline>\n",
-       "\t<li>894</li>\n",
+       "\t<li>9</li>\n",
        "\t<li>0</li>\n",
        "\t<li>0</li>\n",
        "\t<li>0</li>\n",
@@ -233,7 +246,7 @@
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 894\n",
+       "\\item 9\n",
        "\\item 0\n",
        "\\item 0\n",
        "\\item 0\n",
@@ -241,7 +254,7 @@
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 894\n",
+       "1. 9\n",
        "2. 0\n",
        "3. 0\n",
        "4. 0\n",
@@ -250,7 +263,7 @@
        "\n"
       ],
       "text/plain": [
-       "[1] 894   0   0   0   0"
+       "[1] 9 0 0 0 0"
       ]
      },
      "metadata": {},
@@ -268,11 +281,11 @@
       "text/plain": [
        "'mpfrMatrix' of dim(.) =  (5, 1) of precision  120   bits \n",
        "   [,1]                                       \n",
-       "       894.33795836761419195681810379028320312\n",
-       "x1   0.085652621981125776073895394802093505859\n",
-       "x2    0.14300699763407465070486068725585937500\n",
-       "x3 -0.0021995065908697597478749230504035949707\n",
-       "x4 0.00011104609979994961577176582068204879761"
+       "       8.9433795835552700737025588750839233398\n",
+       "x1 0.00085652622286147561680991202592849731445\n",
+       "x2  0.0014300699737503919095615856349468231201\n",
+       "x3 -2.1995065909219402300323054078035056591e-5\n",
+       "x4  1.1104609976553270200838596792891621590e-6"
       ]
      },
      "metadata": {},
@@ -283,11 +296,11 @@
       "text/plain": [
        "'mpfrMatrix' of dim(.) =  (5, 1) of precision  150   bits \n",
        "   [,1]                                                \n",
-       "       894.33795836761419195681810379028320312500000000\n",
-       "x1   0.085652621981125776073895394802093505859375000000\n",
-       "x2    0.14300699763407465070486068725585937500000000000\n",
-       "x3 -0.0021995065908697597478749230504035949707031250000\n",
-       "x4 0.00011104609979994961577176582068204879760742187500"
+       "       8.9433795835552700737025588750839233398437500000\n",
+       "x1 0.00085652622286147561680991202592849731445312500000\n",
+       "x2  0.0014300699737503919095615856349468231201171875000\n",
+       "x3 -2.1995065909219402300323054078035056591033935547e-5\n",
+       "x4  1.1104609976553270200838596792891621589660644531e-6"
       ]
      },
      "metadata": {},
@@ -305,15 +318,27 @@
       "text/plain": [
        "# A float32 matrix: 5x1\n",
        "          [,1]\n",
-       "    8.9434e+02\n",
-       "x1  8.5653e-02\n",
-       "x2  1.4301e-01\n",
-       "x3 -2.1995e-03\n",
-       "x4  1.1105e-04"
+       "    8.9434e+00\n",
+       "x1  8.5653e-04\n",
+       "x2  1.4301e-03\n",
+       "x3 -2.1995e-05\n",
+       "x4  1.1105e-06"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"z użyciem funkcji sprintf:\"\n",
+      "[1] \"8.9433795835552700737025588750839233398437500000000000000\" \n",
+      "[2] \"0.0008565262228614756168099120259284973144531250000000000\" \n",
+      "[3] \"0.0014300699737503919095615856349468231201171875000000000\" \n",
+      "[4] \"-0.0000219950659092194023003230540780350565910339355468750\"\n",
+      "[5] \"0.0000011104609976553270200838596792891621589660644531250\" \n"
+     ]
     }
    ],
    "source": [
@@ -339,7 +364,7 @@
     "    return(z)\n",
     "}\n",
     "\n",
-    "estim = estim(x1,x2,x3,x4,y)\n",
+    "estim = estim(x1,x2,x3,x4,y1)\n",
     "print(convert(estim))\n",
     "\n",
     "print('round:')\n",
@@ -349,7 +374,8 @@
     "mpfr(estim, 150)\n",
     "print('float:')\n",
     "fl(estim)\n",
-    "\n",
+    "print('z użyciem funkcji sprintf:')\n",
+    "print(sprintf(\"%.55f\", estim))\n",
     "\n",
     "\n"
    ]
@@ -358,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wartość estymatora największa jest dla funkcji mpfr o prezcyzji 150.  \n",
+    "Wartość estymatora największa jest dla funkcji sprintf oraz dla funkcji mpfr o prezcyzji 150.  \n",
     "\n",
     "Wartość estymatora najmniejsza jest dla napisanego kodu bez funkcji wbudowanych oraz dla funkcji float.\n",
     "\n",
@@ -490,6 +516,14 @@
    "display_name": "R",
    "language": "R",
    "name": "ir"
+  },
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
