Dodanie jednej funkcji

--- a/lin_reg.ipynb
+++ b/lin_reg.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -32,14 +32,27 @@
       "Z użyciem mpfr dla b0: 350431975154361.125\n",
       "Z użyciem mpfr dla b1: 9099230808282.24609375\n",
       "Z użyciem mpfr ze zmianą precyzji dla b0: 350431975154361.125\n",
-      "Z użyciem mpfr ze zmianą precyzji dla b1: 9099230808282.24609375\n"
+      "Z użyciem mpfr ze zmianą precyzji dla b1: 9099230808282.24609375\n",
+      "Z użyciem String Formatting Operator,b0: 350431975154361.125000000000000\n",
+      "Z użyciem String Formatting Operator,b1: 9099230808282.246093750000000\n",
+      "Z użyciem sympy(smp) b0:  350431975154361.\n",
+      "Z użyciem sympy(smp) b1:  9099230808282.25\n",
+      "Z użyciem biblioteki numpy(longdouble),b0: 350431975154361.1\n",
+      "Z użyciem biblioteki numpy(longdouble),b1: 9099230808282.246\n",
+      "Z użyciem biblioteki numpy(double),b0: 350431975154361.1\n",
+      "Z użyciem biblioteki numpy(double),b1: 9099230808282.246\n",
+      "Z użyciem biblioteki numpy(clongdouble),b0: (350431975154361.1+0j)\n",
+      "Z użyciem biblioteki numpy(clongdouble),b1: (9099230808282.246+0j)\n",
+      "Z użyciem String Formatting Operator dla b0: 3.504320e+14\n",
+      "Z użyciem String Formatting Operator dla b1: 9.099231e+12\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
+    "#from bigfloat import *\n",
+    "import sympy as smp\n",
     "\n",
     "data = pd.read_csv('genomes.csv')\n",
     "\n",
@@ -106,7 +119,26 @@
     "\n",
     "gmpy2.get_context().precision=333\n",
     "print('Z użyciem mpfr ze zmianą precyzji dla b0:',mpfr(a))\n",
-    "print('Z użyciem mpfr ze zmianą precyzji dla b1:',mpfr(b))"
+    "print('Z użyciem mpfr ze zmianą precyzji dla b1:',mpfr(b))\n",
+    "\n",
+    "print('Z użyciem String Formatting Operator,b0:',format(a, '.15f'))\n",
+    "print('Z użyciem String Formatting Operator,b1:',format(b, '.15f'))\n",
+    "\n",
+    "\n",
+    "x=smp.Float(a)\n",
+    "x1=smp.Float(b)\n",
+    "print('Z użyciem sympy(smp) b0: ',x)\n",
+    "print('Z użyciem sympy(smp) b1: ',x1)\n",
+    "\n",
+    "print('Z użyciem biblioteki numpy(longdouble),b0:',np.longdouble(a))\n",
+    "print('Z użyciem biblioteki numpy(longdouble),b1:',np.longdouble(b))\n",
+    "print('Z użyciem biblioteki numpy(double),b0:',np.double(a))\n",
+    "print('Z użyciem biblioteki numpy(double),b1:',np.double(b))\n",
+    "print('Z użyciem biblioteki numpy(clongdouble),b0:',np.clongdouble(a))\n",
+    "print('Z użyciem biblioteki numpy(clongdouble),b1:',np.clongdouble(b))\n",
+    "\n",
+    "print('Z użyciem String Formatting Operator dla b0: %e'%a)\n",
+    "print('Z użyciem String Formatting Operator dla b1: %e'%b)"
    ]
   },
   {
@@ -115,7 +147,7 @@
    "source": [
     "Wartość estymatora największa jest dla funkcji mpf z biblioteki mpmath,z użyciem funkcji mpfr oraz decimal,wynosi  dla b0:350431975154361.125 oraz dla b1: 9099230808282.24609375\n",
     "\n",
-    "Wartość estymatora najmniejsza jest dla powyższego kodu bez wbudowanych funkcji,wynosi dla b0: 350431975154361.1         oraz dla b1: 9099230808282.246 \n",
+    "Wartość estymatora najmniejsza jest dla funkcji smp z biblioteki sympy,wynosi dla b0: 350431975154361. oraz dla b1: 9099230808282.25 \n",
     "\n",
     "Różnice pomiędzy wartościami: polegają na zaokrąglaniu liczb,użyte funkcje są bardziej precyzyjne.\n"
    ]
