--- a/lin_regresja.ipynb
+++ b/lin_regresja.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,6 +129,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1] \"z użyciem funkcji sprintf:\"\n",
+      "[1] \"0.09099230808282256222074835250168689526617527008056640625\"\n",
       "[1] \"my_intercept:\"\n"
      ]
     },
@@ -244,6 +246,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"z użyciem funkcji sprintf:\"\n",
+      "[1] \"350431975154360.875\"\n"
+     ]
     }
    ],
    "source": [
@@ -298,6 +308,9 @@
     "mpfr(my_size, 333)\n",
     "print('float')\n",
     "fl(my_size)\n",
+    "print('z użyciem funkcji sprintf:')       \n",
+    "print(sprintf(\"%.56f\", my_size))\n",
+    "\n",
     "print('my_intercept:')\n",
     "my_intercept\n",
     "print('round:')\n",
@@ -309,6 +322,8 @@
     "mpfr(my_intercept, 333)\n",
     "print('float')\n",
     "fl(my_intercept)\n",
+    "print('z użyciem funkcji sprintf:')\n",
+    "print(sprintf(\"%.3f\", my_intercept))\n",
     "\n",
     "#print('my_r2:')\n",
     "#my_R2"
@@ -318,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wartość estymatora największa jest dla funkcji mpfr z ustawioną precyzją na 333 dla b0:0.09099230808282253446517273687277338467538356781005859375 a dla b1 wartość estymatora jest największa dla funkcji mpfr: 350431975154360.875\n",
+    "Wartość estymatora największa jest dla funkcji mpfr z ustawioną precyzją na 333  oraz funkcji sprintf dla b0:0.09099230808282253446517273687277338467538356781005859375 a dla b1 wartość estymatora jest największa dla funkcji mpfr oraz sprintf: 350431975154360.875\n",
     "\n",
     "Wartość estymatora najmniejsza jest dla funkcji float dla b0 wynosi: 0.090992 oraz dla b1:3.5043e+14\n",
     "\n",
